tests/golden/type_errors/substr_non_number_start_static.cd
substr("abc", "x", 1);
